apps/architecture-portal/versioned_docs/version-1.0.16.5/core/modules/web-runtime-platform.mdx
---
title: Web Runtime Platform
area: core
status: implemented
owners: [core, web, audio]
module: web-runtime-platform
source_paths:
  - packages/web-runtime-platform
  - tests/platform/web
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="web-runtime-platform" />

<DiagramFrame title="Web Runtime Platform Module" diagramId="web-runtime-platform" />

## 1. 目的与非职责
为浏览器 Host 提供共享 Runtime Session、输入 adapter、Control bridge、manifest gate 与 Web Audio 接线；不拥有 Creator UI、诊断 UI、Project Truth 或产品专属身份。
## 2. 当前实现状态
Creator Web 与诊断 Web Runtime Host 共用同一 Platform `0.1.2` 和同一 Wasm Runtime；Host 通过各自受 Product Assembly 允许的分发身份启动。
## 3. 所有权与依赖
只依赖 Application Facade `1.3.1` 与 Audio Runtime `0.4.0`。Product CMake 注入 Product Build、Platform 版本及精确 Host allowlist。
## 4. 架构与数据流
Creator/Diagnostic Host → Runtime Session → Application Facade；Pointer、Keyboard、MIDI 汇入单一有界 Trigger 路由，AudioWorklet 消费不可变 Runtime Snapshot。
## 5. API 与 Contract 边界
Platform 校验 canonical distribution manifest，但该同构建协议不是公开跨版本 Contract。Project Bundle 只通过 Facade 的导入 API 进入 Core。
## 6. 状态、错误与并发
Manifest mismatch、生命周期失效和 terminal failure 均 fail closed；Main、Control、Worker 与 AudioWorklet 的职责和消息上限固定。`recovery_probe_ready` 仅在 Runtime 为 `recovering`、当前 epoch 的 probe window 已 armed 且没有已保留 Probe 时为真；Probe 被保留或 window 关闭后立即回到 false，Host 不得从 timer、Context 状态或页面可见性推断 readiness。
## 7. 产品使用方
`creator-web 1.0.2` 与 `web-runtime-host 1.2.2`。
## 8. 测试与证据
C++ manifest/control/realtime tests、Node Runtime Session tests、Chromium/WebKit browser proof 与分发验证覆盖共享边界；Node 与 Creator packaged Proof 还覆盖 recovery readiness 的 `false -> true -> false -> running` 序列。
## 9. 限制与下一门禁
自动化不替代物理 MIDI、Safari/iPad Touch、声学延迟或主观听感验收。
## 10. 版本身份
版本和依赖由 `module.json` 与 Product Assembly Lock 派生。
